--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="img/icon.jpg">
+	<link rel="shortcut icon" href="icon.jpg">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -55,7 +55,7 @@
 		
 		<div class="collapse navbar-collapse" id="navbarNav">
 		<a class="navbar-brand" href="#home">
-			<img src="img/dayu.jpg" alt="Muhammad Dayu" width="30" height="30" class="rounded-circle" class="d-inline-block align-text-top">
+			<img src="dayu.jpg" alt="Muhammad Dayu" width="30" height="30" class="rounded-circle" class="d-inline-block align-text-top">
 			Muhammad Dayu
 		</a>
 		  <ul class="navbar-nav ms-auto">
@@ -79,7 +79,7 @@
 	
 	<!-- jumbotron -->
 	<section class="jumbotron text-center">
-		<a href="#"><img src="img/dayu.jpg" alt="Muhammad Dayu" width="200" class="rounded-circle img-thumbnail bg" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000"></a>
+		<a href="#"><img src="dayu.jpg" alt="Muhammad Dayu" width="200" class="rounded-circle img-thumbnail bg" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000"></a>
 		<h1 class="display-4" data-aos="zoom-in-up" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Muhammad Dayu</h1>
 		<p class="lead" data-aos="zoom-in-up" data-aos-easing="ease-out-cubic" data-aos-duration="1500">My Hobi Is Play Football and Ngoding</p>
 		<a class="btn btn-lg contact" href="https://api.whatsapp.com/send?phone=6282346148469&text=Assalamualaikum%20Muhammad%20Dayu,%20bagaimana%20kabarnya?" role="button" target="_blank" data-aos="zoom-in-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">Contact Me</a>
@@ -113,13 +113,13 @@
 					<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
-							<img src="img/about1.jpg" class="d-block w-100 img-thumbnail bg" alt="slide1">
+							<img src="about1.jpg" class="d-block w-100 img-thumbnail bg" alt="slide1">
 							</div>
 							<div class="carousel-item">
-							<img src="img/about2.jpg" class="d-block w-100 img-thumbnail bg" alt="slide2">
+							<img src="about2.jpg" class="d-block w-100 img-thumbnail bg" alt="slide2">
 							</div>
 							<div class="carousel-item">
-							<img src="img/about3.jpg" class="d-block w-100 img-thumbnail bg" alt="slide3">
+							<img src="about3.jpg" class="d-block w-100 img-thumbnail bg" alt="slide3">
 							</div>
 						</div>
 					</div>
@@ -152,7 +152,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
 					<div class="card" data-tilt>
-					  <img src="img/galery1.jpg" class="card-img-top" alt="Galery 1">
+					  <img src="galery1.jpg" class="card-img-top" alt="Galery 1">
 					  <div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -162,7 +162,7 @@
 				</div>
 				<div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
 					<div class="card" data-tilt>
-					  <img src="img/galery2.jpg" class="card-img-top" alt="Galery 2">
+					  <img src="galery2.jpg" class="card-img-top" alt="Galery 2">
 					  <div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -172,7 +172,7 @@
 				</div>
 				<div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
 					<div class="card" data-tilt>
-					  <img src="img/galery3.jpg" class="card-img-top" alt="Galery 3">
+					  <img src="galery3.jpg" class="card-img-top" alt="Galery 3">
 					  <div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -182,7 +182,7 @@
 				</div>
 				<div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
 					<div class="card" data-tilt>
-					  <img src="img/galery2.jpg" class="card-img-top" alt="Galery 4">
+					  <img src="galery2.jpg" class="card-img-top" alt="Galery 4">
 					  <div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -192,7 +192,7 @@
 				</div>
 				<div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
 					<div class="card" data-tilt>
-					  <img src="img/galery3.jpg" class="card-img-top" alt="Galery 5">
+					  <img src="galery3.jpg" class="card-img-top" alt="Galery 5">
 					  <div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -202,7 +202,7 @@
 				</div>
 				<div class="col-md-4 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">
 					<div class="card" data-tilt>
-					  <img src="img/galery1.jpg" class="card-img-top" alt="Galery 6">
+					  <img src="galery1.jpg" class="card-img-top" alt="Galery 6">
 					  <div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -263,13 +263,13 @@
 			</div>
 			<div class="text-center py-5">
 				<div class="container py-5">
-					<img src="img/client1.png" class="me-5 mb-5" alt="gojek" data-aos="flip-up" />
-					<img src="img/client2.png" class="me-5 mb-5" alt="grab" data-aos="flip-up"/>
-					<img src="img/client3.png" class="me-5 mb-5" alt="tokopedia" data-aos="flip-up"/>
-					<img src="img/client4.png" class="me-5 mb-5" alt="lazada" data-aos="flip-up"/>
-					<img src="img/client5.png" class="me-5 mb-5" alt="shopee" data-aos="flip-up"/>
-					<img src="img/client6.png" class="me-5 mb-5" alt="acer" data-aos="flip-up"/>
-					<img src="img/client7.png" class="me-5 mb-5" alt="asus" data-aos="flip-up"/>
+					<img src="client1.png" class="me-5 mb-5" alt="gojek" data-aos="flip-up" />
+					<img src="client2.png" class="me-5 mb-5" alt="grab" data-aos="flip-up"/>
+					<img src="client3.png" class="me-5 mb-5" alt="tokopedia" data-aos="flip-up"/>
+					<img src="client4.png" class="me-5 mb-5" alt="lazada" data-aos="flip-up"/>
+					<img src="client5.png" class="me-5 mb-5" alt="shopee" data-aos="flip-up"/>
+					<img src="client6.png" class="me-5 mb-5" alt="acer" data-aos="flip-up"/>
+					<img src="client7.png" class="me-5 mb-5" alt="asus" data-aos="flip-up"/>
 				</div>
 			</div>
 		</div>
@@ -297,7 +297,7 @@
 	</script>
 
 	<!-- 3D -->
-	<script type="text/javascript" src="asset/vanilla-tilt.min.js"></script>
+	<script type="text/javascript" src="vanilla-tilt.min.js"></script>
 
   </body>
 </html>
