--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						</div>
 						<div class="mb-3">
 							<div class="col-5">
-								<button type="reset" class="btn text-black contact me-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Reset</button><button type="submit" class="btn text-black contact" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Kirim</button>
+								<button type="reset" class="btn text-black contact me-3 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Reset</button><button type="submit" class="btn text-black contact" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Kirim</button>
 							</div>
 						</div>
 					</form>
@@ -258,7 +258,7 @@
 						<p  data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000"><i class="fa fa-envelope" style="color:pink"></i> mdayujr@gmail.com</p>
 						<p  data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000"><i class="fa fa-map-marker" style="color:red"></i> Jl. Haji Kalla panaikang makassar</p>
 					</div>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.762755572648!2d119.45349061584933!3d-5.141852443221204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dbee2d368ef2709%3A0xc7f301192252b55a!2sJl.%20H.%20Kalla%20No.2%2C%20Panaikang%2C%20Kec.%20Panakkukang%2C%20Kota%20Makassar%2C%20Sulawesi%20Selatan%2090231!5e0!3m2!1sid!2sid!4v1657962327752!5m2!1sid!2sid" class="w-100 h-80 mt-3 rounded" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000"></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.762755572648!2d119.45349061584933!3d-5.141852443221204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dbee2d368ef2709%3A0xc7f301192252b55a!2sJl.%20H.%20Kalla%20No.2%2C%20Panaikang%2C%20Kec.%20Panakkukang%2C%20Kota%20Makassar%2C%20Sulawesi%20Selatan%2090231!5e0!3m2!1sid!2sid!4v1657962327752!5m2!1sid!2sid" class="w-100 h-80 mt-3 rounded" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mb-5" data-aos="fade-left" data-aos-easing="ease-out-cubic" data-aos-duration="1000"></iframe>
 				</div>
 			</div>
 		</div>
