--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						</div>
 						<div class="mb-3">
 							<div class="col-5">
-								<button type="reset" class="btn text-black contact me-3 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Reset</button><button type="submit" class="btn text-black contact" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Kirim</button>
+								<button type="submit" class="btn text-black contact me-3 mb-3" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Kirim</button><button type="reset" class="btn text-black contact" data-aos="zoom-in" data-aos-easing="ease-out-cubic" data-aos-duration="1000">Reset</button>
 							</div>
 						</div>
 					</form>
